Add feature toggles (enable_steps, enable_versioning) with RX/TX filter pattern [mcpp:user=root,task=feature-toggles-v2,step=6]

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,5 @@ workflow:
   allow_reopen_completed: false
   require_goal_and_plan: true
   vcs_backend: mcpp-plan
+  enable_steps: true
+  enable_versioning: true
